<resources>
    <string name="app_name">HF-AndroidClient</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign out</string>
    <string name="title_activity_nav_dwr">NavDwrActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="pref_client">Client Settings</string>
    <string name="pref_client_key1">Key1</string>
    <string name="pref_client_key2">Key2</string>

    <string name="pref_client_m">M</string>
    <string name="pref_client_k">k</string>

    <!--
    <string name="pref_client_key3">Key3</string>
    <string name="pref_client_key4">Key4</string>
    <string name="pref_client_keyd">KeyD</string>
    <string name="pref_client_keyc">KeyC</string>
    <string name="pref_client_keyl">KeyL</string>
    -->
    <string name="pref_client_genkeys">Generate Keys</string>
    <string name="pref_client_clrappdb">Clear App DB</string>
    <string name="pref_client_datadir">Data Directory</string>

    <string name="pref_client_ssetype">SSE Type</string>

    <string name="pref_server">Server Settings</string>
    <string name="pref_server_hostname">Hostname</string>
    <string name="pref_server_report_stat">Report statistics</string>

    <string name="pref_crypto_test">Crypto Test Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_google_drive">GoogleDriveActivity</string>

    <string name="developer_email">coreocto@hotmail.com</string>
    <string name="developer_name">coreocto</string>

    <string name="pref_client_chlh_numofhash">Num. of Hash Function</string>
    <string name="pref_client_chlh_bitsize">Bit Size</string>
    <string name="pref_client_chlh_fpr">False Positive Rate</string>
    <string name="pref_client_chlh_expectdoccnt">Expected Doc. Cnt.</string>


</resources>
